Fixed button on mobile version

--- a/src/css/media.less
+++ b/src/css/media.less
@@ -731,7 +731,7 @@
     .js-submenu-btn {
       display: inline-block;
       top: 0;
-      margin-left: 70px;
+      right: 25%;
       width: 50px;
       height: 40px;
     }
@@ -1383,7 +1383,7 @@
     .js-submenu-btn {
       display: inline-block;
       top: 0;
-      margin-left: 60px;
+      right: 22%;
       width: 40px;
       height: 35px;
     }
